--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@
 }
 .col-day {
   text-align: center;
-  border: 2px solid;
+  border: 2px solid #2e94b9;
   border-radius: 10px;
   padding: 5px;
   margin: 5px;
@@ -21,6 +21,10 @@
 }
 .temperNow {
   font-size: 68px;
+}
+.temper-with-units {
+  position: relative;
+  left: -30px;
 }
 .weatherCondition {
   font-size: 22px;
@@ -38,7 +42,10 @@
   font-size: 20px;
 }
 #icon-main {
-  font-size: 52px;
+  width: 100px;
+  position: relative;
+  top: -20px;
+  left: -20px;
 }
 .unitsLink {
   text-decoration: none;
