--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,9 @@
   border-radius: 40px;
   background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
 }
+.nowDate {
+  margin: 0;
+}
 .col-day {
   text-align: center;
   border: 2px solid #2e94b9;
@@ -62,6 +65,9 @@
 }
 .bottomLink:hover {
   color: darkblue;
+}
+#description {
+  text-transform: capitalize;
 }
 button {
   background: transparent;
